[project]
name = "sql-repair-env"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for SQL query repair tasks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "openai>=1.51.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
